# Florigram

./: .gitignore  package-lock.json  package.json
backend/: Cargo.toml  Dockerfile  French ODS dictionary.txt  Procfile
backend/api/: main.rs  repertoire.rs  routes.rs
backend/src/: day.rs  main.rs  repertoire.rs
backend/src/routes/: day.rs  valide.rs
frontend/: .env  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: page.tsx
frontend/src/app/rules/: page.tsx
frontend/src/components/: NavBar.tsx
